--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@rainbow-me/rainbowkit": "^2.0.5",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@tanstack/react-query": "^5.29.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.9.21",
+    "wagmi": "^2.5.20"
   },
   "devDependencies": {
     "typescript": "^5",
